# interview-gems

./: Graph.h  README.md  compile.sh  main.cpp  merge.cc  perm.cc  sorting.cc
arrays/: array_product.cc  bin_search.cc  binary_search_sorted_array.cc  continuous_array_sum.cc  exponential_search.cc  find_dup.cc  find_dups.cc  interpolation_search.cc  intersection_intervals.cc  largest_area_histogram.cc  lis.cc  majority_count.cc  max_product_subarray.cc  median_sorted.cc  merge_intervals.cc  remove_dup_2.cc  rotate_array.cc  rotate_matrix.cc  smallest_rotated_array.cc  sort_colors_inplace.cc  sorted_matrix_search.cc  spiral_iteration.cc  unique_paths.cc  word_search.cc
combinatorics/: combination_sum.cc  generate_sets_backtrack.cc  generate_sets_bits.cc  generate_valid_parantheses.cc  permute_vector.cc
companies/: amazon.cc  canonical_names.cc  fb.cc  fb2.cc  fb3.cc  fb4.cc  fb5.cc  fb_mine.cc  google2.cc  google_mine.cc  google_screen_1.cc  ocean_view_fb.cc  streaming_merge.cc  trapped_water.cc  word_break_fb.cc  word_break_fb2.cc
concepts/: bit-manipulation.txt  concepts.txt  dp.txt  graphs.txt  important-concepts.txt  important-links.txt  monotonic_increasing_stack.txt  sliding-window.txt  system-design.txt
cpp/google-test/: CMakeLists.txt  testvector.cc
dfa/: valid_number.cc
dp/: equal-partition-sum.cc  lis.cc
graphs/: bellman-ford.cc  binary_trees.cc  bipartite.cc  course_possible.cc  detect_cycle.cc  dijkstra.cc  dijkstra.h  evaluate_division.cc  find_bridges.cc  find_scc_tarjan.cc  kahn_topological_sort.cc  kosaraju.cc  kosaraju_algo.cc  kruskal.cc  (+4 more)
(+55 files in other folders)
